--- a/index.html
+++ b/index.html
@@ -125,14 +125,14 @@
       <!-- ? Section Images-3 Start -->
       <section class="bacground-image-three">
         <header class="header heading_conteiner_small">
-          <span>YILMAZ TEAM</span>
+          <span>CLARUSWAY TEAM</span>
         </header>
       </section>
       <!-- ? Section Images-3 End -->
 
       <!-- ? Section Dark Text Start -->
       <section class="section section-dark" id="about">
-        <h2>Why YILMAZ</h2>
+        <h2>Why CLARUSWAY</h2>
         <p>
           From beginners to intermediate level students, our curated content
           will meet your unique needs. Our proven curriculum and experienced
